--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -4,18 +4,18 @@ $image-path: '../../node_modules/mdbootstrap/img/';
 $roboto-font-path: '../../node_modules/mdbootstrap/font/roboto/';
 $material-design-icons-font-path: '../../node_modules/material-design-icons-iconfont/dist/fonts/';
 $material-design-icons-font-file-path: '../../node_modules/material-design-icons-iconfont/dist/fonts/MaterialIcons-Regular';
-$fa-font-path:'../../node_modules/@fortawesome/fontawesome-free-webfonts/webfonts';
+$fa-font-path: '../../node_modules/@fortawesome/fontawesome-free-webfonts/webfonts';
 
-@import "~material-design-icons-iconfont/src/material-design-icons";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fontawesome.scss";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-brands.scss";
-@import "~bootstrap/scss/bootstrap";
-@import "~mdbootstrap/scss/mdb";
+@import '~material-design-icons-iconfont/src/material-design-icons';
+@import '~@fortawesome/fontawesome-free-webfonts/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss';
+@import '~@fortawesome/fontawesome-free-webfonts/scss/fa-brands.scss';
+@import '~bootstrap/scss/bootstrap';
+@import '~mdbootstrap/scss/mdb';
 
-@import "~xterm/dist/xterm.css";
-@import "~nouislider/distribute/nouislider.min.css";
-@import "~dragula/dist/dragula.min.css";
+@import '~xterm/dist/xterm.css';
+@import '~nouislider/distribute/nouislider.min.css';
+@import '~dragula/dist/dragula.min.css';
 
 @import './toastr.scss';
 @import './checkbox.scss';
@@ -29,7 +29,8 @@ $fa-font-path:'../../node_modules/@fortawesome/fontawesome-free-webfonts/webfont
  * Base structure
  */
 
-html, body {
+html,
+body {
   height: 100%;
   -webkit-font-smoothing: subpixel-antialiased;
 }
@@ -58,10 +59,10 @@ body {
 
 .btn {
   font-weight: 400;
-  padding: .375rem .75rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: .25rem;
+  border-radius: 0.4rem;
 }
 
 /* Prevent outlines around the close button when a modal opens */
@@ -125,17 +126,18 @@ button {
 }
 
 .card .card-text {
-  font-size: .9rem;
+  font-size: 0.9rem;
   color: #747373;
   font-weight: 400;
 }
 
-.md-form .form-control:disabled, .md-form .form-control[readonly] {
-  color: rgba(0,0,0,.46)
+.md-form .form-control:disabled,
+.md-form .form-control[readonly] {
+  color: rgba(0, 0, 0, 0.46);
 }
 
 .dropdown-toggle::after {
-  display:none
+  display: none;
 }
 
 .hb-ace-text-editor {
