--- a/ui/src/scss/themes.scss
+++ b/ui/src/scss/themes.scss
@@ -10,7 +10,8 @@
       color: $primary;
     }
 
-    .btn-primary, .btn-default {
+    .btn-primary,
+    .btn-default {
       @extend .btn-#{$name} !optional;
     }
 
@@ -29,7 +30,7 @@
     }
 
     .hb-uix-switch {
-      .hb-uix-slider  {
+      .hb-uix-slider {
         border-color: $primary !important;
       }
 
@@ -40,7 +41,7 @@
   }
 }
 
-@include make-theme('red', #F44336, #D32F2F);
+@include make-theme('red', #f44336, #d32f2f);
 @include make-theme('pink', #e91e63, #c2185b);
 @include make-theme('purple', #9c27b0, #7b1fa2);
 @include make-theme('indigo', #3f51b5, #303f9f);
